--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@ layout: compress
 <body class="body">
 <div class="container">
     <header class="header">
-        <h1>Modern Blog<span>A Clean, Fresh Minimal Look.</span></h1>
-        <nav class="links">
+        <h1>React Blogs
+            <!-- <span>A Clean, Fresh Minimal Look.</span> -->
+        </h1>
+        <!-- <nav class="links">
             <a href="#"><i class="fa fa-twitter-square fa-3x"></i></a>
             <a href="#"><i class="fa fa-instagram fa-3x"></i></a>
             <a href="#"><i class="fa fa-facebook-square fa-3x"></i></a>
             <a href="#"><i class="fa fa-tumblr-square fa-3x"></i></a>
-        </nav>
+        </nav> -->
     </header>
     <div class="content">
         <!-- trianglify pattern container -->
